--- a/Frontend/shreeji-shop/package.json
+++ b/Frontend/shreeji-shop/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~10.0.0",
     "@angular/platform-browser-dynamic": "~10.0.0",
     "@angular/router": "~10.0.0",
+    "bootstrap-icons": "^1.0.0",
     "primeng": "^10.0.3",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
