--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.password=tiger
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 server.port=8099
 spring.jpa.show-sql=true
+jwt.expiration.time=900000
